优化用户体验

--- a/二轮考核/index.html
+++ b/二轮考核/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./signIn.css">
-    <link rel="stylesheet" media='screen and (max-width:1536px)' href="index_1536px.css">
+    <link rel="stylesheet" media='screen and (max-width:1535px)' href="index_1536px.css">
     <style media="(min-width:2560px)">
         body {
             width: 2560px;
@@ -317,16 +317,28 @@
         <div class="rightCenterNav">
             <ul>
                 <li><i class="iconfont">&#xe630;
-                    </i>专栏</li>
-                <li><i class="iconfont">&#xe661;</i>活动</li>
+                    </i>
+                    <p>专栏</p>
+                </li>
+                <li><i class="iconfont">&#xe661;</i>
+                    <p>活动</p>
+                </li>
                 <li><i class="iconfont">&#xe625;
-                    </i>社区中心</li>
+                    </i>
+                    <p>社区中心</p>
+                </li>
             </ul>
             <ul>
-                <li><i class="iconfont">&#xe866;</i>直播</li>
-                <li><i class="iconfont">&#xe672;</i>课堂</li>
+                <li><i class="iconfont">&#xe866;</i>
+                    <p>直播</p>
+                </li>
+                <li><i class="iconfont">&#xe672;</i>
+                    <p>课堂</p>
+                </li>
                 <li><i class="iconfont">&#xe867;
-                    </i>新歌热榜</li>
+                    </i>
+                    <p>新歌热榜</p>
+                </li>
             </ul>
         </div>
     </div>
