--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./person.css">
     <link rel="stylesheet" href="./signIn.css">
-    <link rel="stylesheet" media='screen and (max-width:1536px)' href="index_1536px.css">
+    <link rel="stylesheet" media='screen and (max-width:1535px)' href="index_1536px.css">
     <link rel="stylesheet" media='screen and (max-width:1395px)' href="person_1396px.css">
     <style media="(min-width:2560px)">
         body {
@@ -286,7 +286,7 @@
                 </ul>
             </div>
         </div>
-        <div class="collections">
+        <div class="collections nodata">
             <div class="head">
                 <div>批量操作</div>
                 <div>全部分区<i class="iconfont">&#xe62a;</i></div>
