--- a/二轮考核/video.html
+++ b/二轮考核/video.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="stylesheet" href="./video.css">
     <link rel="stylesheet" href="./signIn.css">
-    <link rel="stylesheet" media='screen and (max-width:1536px)' href="index_1536px.css">
+    <link rel="stylesheet" media='screen and (max-width:1535px)' href="index_1536px.css">
 
     <style media="(min-width:2560px)">
         body {
@@ -154,8 +154,12 @@
         <div class="left">
             <div class="title">title</div>
             <div class="info">
-                <span class="playAmount"><i class="iconfont">&#xe70a;</i>播放量</span>
-                <span class="barAmount"><i class="iconfont">&#xe665;</i>弹幕数量</span>
+                <span class="playAmount"><i class="iconfont">&#xe70a;</i>
+                    <p class="data">0</p>
+                </span>
+                <span class="barAmount"><i class="iconfont">&#xe665;</i>
+                    <p class="data">0</p>
+                </span>
                 <span class="uploadTime"><i class="iconfont">&#xe8c4;</i>上传时间</span>
                 <span class="condition"><i class="iconfont">&#xe654;</i>未经作者授权，禁止转载</span>
             </div>
