个人主页退出登录处理

--- a/二轮考核/person.html
+++ b/二轮考核/person.html
@@ -234,7 +234,7 @@
                 </ul>
             </div>
         </div>
-        <div class="collections">
+        <div class="collections nodata">
             <div class="default">
                 <div class="box">
                     <div class="video">
